# mcc-bot

./: Cargo.toml  LICENSE  run-db.sh  settings.toml.ex
migrations/: 20210412065433_initial.sql
src/: entities.rs  error.rs  lib.rs  log.rs  main.rs  settings.rs
src/bot/: api.rs  command.rs  commands.rs  dispatcher.rs  frame.rs  helper.rs  listener.rs  message_handler.rs  mod.rs  service.rs  shared.rs
src/bot/respondents/: default.rs
src/bot/states/: default.rs  mod.rs  vacancies.rs
src/database/: connection.rs  mod.rs  model.rs  requester.rs
src/database/model/: mod.rs  tokens.rs  users.rs  vacancies.rs
src/localization/: mod.rs
