[package]
name = "mcc-bot"
version = "0.1.0"
authors = ["Aleksei Abakumkin <cranberry.clockworks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { verison = "0.4", features = ["auto-send"] }
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }