[package]
name = "mcc-bot"
version = "0.1.0"
authors = ["Aleksei Abakumkin <cranberry.clockworks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = "3.0.0-beta.2"
rpassword = "5.0.1"
tokio = { version =  "1.3", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
teloxide = { verison = "0.4", features = ["auto-send"] }

